# xfce4-treemenu-plugin

./: .gitignore  README
icons/128x128/: Makefile.am
panel-plugin/: Makefile.am  garcon-cnp.c  garcon-cnp.h  garcon-treeview.c  garcon-treeview.h  treemenu-panel-plugin.c  treemenu-panel-plugin.h  treemenu-widget.c  treemenu-widget.h  treemenu-window.c  treemenu-window.h  treemenu.c  treemenu.desktop.in.in
